fix dropdown visibility

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,25 +1,15 @@
 .clicked {
-    /* background-color: #04AA6D; */
     background-color: #B0AE96;
 }
 
-/* ul { */
-    /* list-style-type: none; */
-    /* margin: 0; */
-    /* padding: 0; */
-    /* overflow: hidden; */
-    /* background-color: #B07C5A; */
-/* } */
+body {
+    overflow: hidden;
+}
 
-/* li { */
-    /* float: left; */
-    /* width: 20vw; */
-/* } */
 
 .bar {
-    overflow: hidden;
+    overflow: auto;
     background-color: #B07C5A;
-    
 }
 
 
@@ -30,51 +20,56 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    /* height: 10vh; */
+    z-index: 2;
 }
 
-.bar .buttonelement:hover {
-    background-color: #C0A78D;
-}
 
-.dropdownmenu {
+.dropdown {
     float: left;
-    overflow: hidden;
-    /* display: none; */
+}
+
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0
+}
+
+
+.bar .buttonelement:hover, .dropdownelement:hover, .dropdown:hover .dropbtn {
+    background-color: #C0A78D;
 }
 
 
 .dropdowns {
     display: none;
-    position: : absolute;
+    background-color: #f9f9f9;
+    z-index: 2;
+}
+
+
+.dropdowns .dropdownelement {
     float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
+    display: block;
     text-align: left;
 }
 
-.timebutton:hover .dropdowns:hover .dropdownelement {
+
+.dropdown:hover .dropdowns {
     display: block;
+    position: absolute;
 }
 
 
-
-    /* overflow: hidden; */
-    /* background: ; */
-
-
-    /* position: absolute; */
-    /* top: 0; */
-    /* left: 0; */
-    /* right: 0; */
-    /* height: 10vh; */
-/* } */
-
 #map {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
     height: 90vh;
+    z-index: 1;
 }
